Fixed spacing

--- a/search.css
+++ b/search.css
@@ -100,3 +100,9 @@ div#suggestions{
 .outLink {
   color: #196619;
 }
+#results{
+  margin:auto;
+}
+p{
+  margin:0px;
+}
